@@ -4,14 +4,12 @@ GAMEIDS
 
 SLF?01		NSMBW3: The Final Levels
 SMN?01		Original New Super Mario Bros. Wii
-SMN?02		?
 SMN?03		Newer Super Mario Bros. Wii
 SMN?04		Canon Super Mario Bros. Wii
 SMN?05		Another Super Mario Bros. Wii
 SMN?06		Newer Summer Sun
 SMN?07		Newer Holiday Special
 SMN?08		Epic Super Bowser World
-SMN?09		?
 SMN?10		Koopa Country
 SMN?11		New Super Mario Bros. 4
 SMN?12		Awesomer Super Luigi Mini
@@ -20,6 +18,7 @@ SMN?41		Devil Mario Winter Special
 SMN?60		Remixed Super Mario Bros. Wii
 SMN?65		Ghostly Super Ghost Boos. Wii
 SMN?66		The Legend of Yoshi
+SMN?69		Revised Super Mario Bros. Wii
 SMN?DU		DarkUmbra Super Mario Bros: Anniversary Edition
 SMN?FL		Newer: Falling Leaf
 SMN?MI		Midi's Super Mario Bros Wii - Just A Little Adventure
@@ -64,8 +63,8 @@ RMC?32		Wiimms MKW-Fun 2016-07
 
 ### Kirby's Adventure Wii ###
 
-SUK?01		Kirby's Adventure Wii (only exchanging first
-		player's character is supported)
+SUK?01		Kirby's Adventure Wii
+		* exchange first player's character
 
 ### Pokemon ###
 
@@ -81,6 +80,11 @@ SUK?01		Kirby's Adventure Wii (only exchanging first
 000400000011C500	Pokemon Alpha Sapphire
 			* Pokemon Star Sapphire
 			* Pokemon Sinking Sapphire
+
+### Bravely ###
+
+000400000017BB00	Bravely Second
+			* De-Censoring the game
 
 ### Toyko Mirage Sessions #FE ###
 
